--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,7 @@
 @import "components/footer";
 @import "components/aboutUs";
 @import "components/adopt";
-
+@import "components/donations";
 @import "responsive/mediaQueries";
 
 
