--- a/css/main.css
+++ b/css/main.css
@@ -472,6 +472,110 @@ header.sticky {
   color: #fff;
 }
 
+/*--- CONTACT SECTION ---*/
+.container-contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 80%;
+  height: auto;
+  -webkit-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+  margin: 9rem auto auto auto;
+}
+
+.container-contact .contact-title {
+  width: 100%;
+  color: black;
+  padding: 30px 10px 5px 30px;
+}
+
+.container-contact .contact-title h2 {
+  position: relative;
+  font-size: 1.5em;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+.container-contact .contact-title h2::before {
+  content: '';
+  position: absolute;
+  margin: auto;
+  height: 1px;
+  background: black;
+  width: 100%;
+  bottom: 0;
+}
+
+.container-contact .contact-form {
+  width: 100%;
+  -webkit-box-flex: 50%;
+      -ms-flex: 50%;
+          flex: 50%;
+  padding: 0 30px;
+}
+
+.container-contact .contact-form .contact-row {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container-contact .contact-form .contact-row .contact-column {
+  width: 50%;
+  margin: 10px;
+}
+
+.container-contact .contact-form .contact-row input,
+.container-contact .contact-form .contact-row textarea {
+  width: 100%;
+  padding: 8px;
+  border: 2px solid #AEA4F2;
+  border-radius: 5px;
+  outline: none;
+  resize: none;
+  font-size: 16px;
+}
+
+.container-contact .contact-form .contact-row input[type="submit"] {
+  display: inline-block;
+  max-width: 150px;
+  padding: 8px 18px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  background: #AEA4F2;
+  color: #fff;
+  cursor: pointer;
+}
+
+.container-contact .contact-form .contact-row input[type="submit"]:hover {
+  background: #877ec4;
+  border: 2px solid #877ec4;
+}
+
+.container-contact .contact-form .contact-row .contact-columnarea {
+  width: 100%;
+  margin: 10px;
+}
+
+.container-contact .map {
+  width: 100%;
+  height: auto;
+  -webkit-box-flex: 50%;
+      -ms-flex: 50%;
+          flex: 50%;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.container-contact .map iframe {
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 991px) {
   header, .header.sticky {
     padding: 20px 50px;
